--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -12,6 +12,8 @@ RUN if [ ${CHANGE_SOURCE} = true ]; then \
 
 RUN apk update \
     && apk upgrade \
+    && apk --update add logrotate \
+    && apk add --no-cache openssl \
     && apk add --no-cache bash
 
 RUN set -x ; \
@@ -25,6 +27,14 @@ ARG NODE_UPSTREAM_PORT=9000
 RUN echo "upstream node-upstream { server ${NODE_UPSTREAM_CONTAINER}:${NODE_UPSTREAM_PORT}; }" > /etc/nginx/conf.d/upstream.conf \
     && rm /etc/nginx/conf.d/default.conf
 
-CMD ["nginx"]
+# Create 'messages' file used from 'logrotate'
+RUN touch /var/log/messages
+
+# Copy 'logrotate' config file
+COPY logrotate/nginx /etc/logrotate.d/
+
+ADD ./startup.sh /opt/startup.sh
+RUN sed -i 's/\r//g' /opt/startup.sh
+CMD ["/bin/bash", "/opt/startup.sh"]
 
 EXPOSE 80 443
