feat: add zsh shell to workspace container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,9 @@ services:
         - PGID=${WORKSPACE_PGID}
         - TZ=${WORKSPACE_TIMEZONE}
         - PUPPETEER_SUPPORT=${PUPPETEER_SUPPORT}
+        - SHELL_OH_MY_ZSH=${WORKSPACE_SHELL_OH_MY_ZSH}
+        - SHELL_OH_MY_ZSH_AUTOSUGESTIONS=${WORKSPACE_SHELL_OH_MY_ZSH_AUTOSUGESTIONS}
+        - SHELL_OH_MY_ZSH_ALIASES=${WORKSPACE_SHELL_OH_MY_ZSH_ALIASES}
     volumes:
       - ${APP_CODE_PATH_HOST}:${APP_CODE_PATH_CONTAINER}
     extra_hosts:
