--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -333,9 +333,24 @@ services:
   ### MailDev ##############################################
   maildev:
     build: ./maildev
+    environment: 
+      - MAILDEV_SMTP_PORT=${MAILDEV_SMTP_PORT}
+      - MAILDEV_WEB_PORT=${MAILDEV_WEB_PORT}
+      - MAILDEV_WEB_USER=${MAILDEV_WEB_USER}
+      - MAILDEV_WEB_PASS=${MAILDEV_WEB_PASS}
+      - MAILDEV_INCOMING_USER=${MAILDEV_INCOMING_USER}
+      - MAILDEV_INCOMING_PASS=${MAILDEV_INCOMING_PASS}
+      - MAILDEV_OUTGOING_HOST=${MAILDEV_OUTGOING_HOST}
+      - MAILDEV_OUTGOING_PORT=${MAILDEV_OUTGOING_PORT}
+      - MAILDEV_OUTGOING_USER=${MAILDEV_OUTGOING_USER}
+      - MAILDEV_OUTGOING_PASS=${MAILDEV_OUTGOING_PASS}
+      - MAILDEV_OUTGOING_SECURE=${MAILDEV_OUTGOING_SECURE}
+      - MAILDEV_AUTO_RELAY_RULES=/home/node/rules.json
+    volumes: 
+      - ./maildev/rules.json:/home/node/rules.json
     ports:
-      - "${MAILDEV_HTTP_PORT}:80"
-      - "${MAILDEV_SMTP_PORT}:25"
+      - "${MAILDEV_HOST_HTTP_PORT}:${MAILDEV_WEB_PORT}"
+      - "${MAILDEV_HOST_SMTP_PORT}:${MAILDEV_SMTP_PORT}"
     networks:
       - frontend
       - backend
